--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <body>
     <div class="img">
-        <img src="/images/header.png" class="responsive">
+        <img src="./images/header.png" class="responsive">
     </div>
     <div class="container">
         <div class="row">
